--- a/README.adoc
+++ b/README.adoc
@@ -6,6 +6,7 @@ Tests created via link:https://approvaltests.com/[Approval Test Library].
 If you are working in a legacy code scenario you should definitely check out link:https://www.youtube.com/watch?v=zyM2Ep28ED8[Introducing the Gilded Rose kata and writing test cases using Approval Tests by Emily Bache].
 
 If you are looking for a simpler example to get started with testing legacy code, take a look at link:https://github.com/Richargh/legacy-code-test-starter-mvn-java[Legacy Code Starter].
+If you are looking for an example that does not use approval tests, see link:https://github.com/johanneswseitz/trivia-with-golden-master-java[Trivia with Golden Master].
 
 == Attempts
 
